@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-03-20:
+
+- Fixed incorrect result of array slicing ${array[@]:offset:length} where
+  'length' is a nested expansion involving an array. For example,
+  ${array[@]:0:${#array[@]}} is now correctly equivalent to ${array[@]}.
+
 2023-03-19:
 
 - Fixed a crash in 'read' (as well as a spurious error in 'printf -v', added
